--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Load a Model with R3F</title>
+    <link rel="icon" type="image/x-icon" href="/images/Favicon.svg">
+    <title>Elio Fezollari</title>
 </head>
 <body>
     <div id="root"></div>
